# td-mcp-server

./: .coverage  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  README.md  build_and_run.sh  main.py  pyproject.toml  requirements.txt  test_mcp_integration.py
.claude/: plugins.json
.github/workflows/: pre-commit.yml  python-tests.yml
docs/: treasure-data-api-guide.md
td_mcp_server/: README.md  __init__.py  api.py  cli.py  cli_api.py  diagnostic_tools.py  exploration_tools.py  mcp.py  mcp_impl.py  mcp_server.py  search_tools.py  server.py  url_tools.py
tests/integration/: test_direct_mcp.py  test_mcp_jsonrpc_compliance.py  test_mcp_protocol.py  test_mcp_stdio_transport.py
tests/unit/: test_api.py  test_cli_api.py  test_mcp_impl.py
