[project]
name = "td-mcp-server"
version = "0.1.0"
description = "Treasure Data API client for MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0,<8.2.0",
    "pydantic>=2.0.0",
    "mcp[cli]>=1.8.1",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
    "mypy>=1.0.0",
    "ruff>=0.1.6",
    "pre-commit>=3.3.0",
]

[project.scripts]
td-list-databases = "td_mcp_server.cli_api:main_list_databases"
td-get-database = "td_mcp_server.cli_api:main_get_database"
td-list-tables = "td_mcp_server.cli_api:main_list_tables"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=td_mcp_server --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "W", "B", "C4", "N", "UP"]
ignore = []
exclude = [
    ".git",
    ".venv",
    "__pycache__",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["td_mcp_server"]
